fix(basic card list): changed breakpoint for two column layout
affects: @buildit/gravity-ui-web

the two column layout was not looking great between 700px and 800px

--- a/packages/gravity-ui-web/src/sass/05-components/03-organisms/_list-cards-basic.scss
+++ b/packages/gravity-ui-web/src/sass/05-components/03-organisms/_list-cards-basic.scss
@@ -6,7 +6,7 @@
     margin-top: $grav-sp-xl;
   }
 
-  @media all and (min-width: grav-breakpoint(medium)) {
+  @media all and (min-width: grav-breakpoint(large)) {
     display: flex;
     flex-wrap: wrap;
     margin-right: -$grav-sp-l;
